--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:image" content="Telegram_2019_Logo.svg.png"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Telegram:  Contact @Drama-Natok</title>
+    <title>Telegram:  Contact @Dramaa-Natok</title>
     <style>
         /* General body styles */
         body {
